--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "inventory-application",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.15.3"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -8,12 +11,20 @@
     "serverstart": "DEBUG=inventory-application:* & npm run devstart"
   },
   "dependencies": {
+    "async": "^3.2.2",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.6",
     "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "express-ejs-layouts": "^2.5.1",
+    "express-validator": "^6.13.0",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^6.0.12",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.3",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
