Added authentication feature for app. Now users can sign up and log in

--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
   },
   "dependencies": {
     "async": "^3.2.2",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
     "express-validator": "^6.13.0",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
+    "luxon": "^2.2.0",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
